
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="#000000"
        android:orientation="vertical">
		
    	<!-- MENSAGEM DO APLICATIVO -->
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
    	
		<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/mensagem"
		android:textSize="8pt"
		android:textColor="#FF0000"
		android:paddingTop="6pt"
		android:paddingRight="15pt"
		/>   
    	   
    	</LinearLayout>
    	
   		<!-- ######################### Textview Provedor ######################### -->
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		
		<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/provedor"
		android:textSize="10pt"
		android:textColor="#FF0000"
		android:paddingTop="6pt"
		/>
	
		<TextView
		android:id="@+id/txtProvedor"
		android:textColor="#FFFF00"
		android:textSize="8pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
		</LinearLayout>
      	
      	<!-- Comentario 
    	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		
		<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Velocidade: "
		android:textSize="10pt"
		android:textColor="#FF0000"
		android:paddingTop="6pt"
		/>
	
		<TextView
		android:id="@+id/txtVelocidade"
		android:textColor="#FFFF00"
		android:textSize="8pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
		</LinearLayout>
    	
    	-->
			  
		<!--######################## Textview Latitude  ############################## -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		
		<TextView
		android:id="@+id/lblLatitude"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/latitude"
		android:textSize="10pt"
		android:textColor="#FF0000"
		android:paddingTop="6pt"
		/>
	
		<TextView
		android:id="@+id/txtLatitude"
		android:textColor="#FFFF00"
		android:textSize="8pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
		</LinearLayout>
		
        
        <!--######################## Textview Longitude  ############################## -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
	
		<TextView
		android:id="@+id/lblLongitude"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/longitude"
		android:textSize="10pt"
		android:textColor="#FF0000"
		android:paddingTop="6pt"
		/>
	
		<TextView
		android:id="@+id/txtLongitude"
		android:textColor="#FFFF00"
		android:textSize="8pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>
		</LinearLayout>
		
        
        <!--######################## button conectar  ############################## -->          
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:paddingTop="23pt"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button
		android:id="@+id/btnConectar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#FF0000"
		android:textSize="10pt"
		android:text="@string/conectar"
		/>		
        </LinearLayout>
        
		<!--######################## button desconectar  ############################## -->
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:paddingTop="3pt"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<Button
		android:id="@+id/btnDesconectar"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#FF0000"
		android:textSize="10pt"
		android:text="@string/desconectar"
		/>		
        </LinearLayout>
        

		
		
</LinearLayout>
